css/styles.css
/* Google Font Import */
@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Hind:wght@300;400&display=swap');

/* Global Properties */
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

html {
    scroll-behavior: smooth;
}

:root {
    --primary-color:  #7b2a2a;
    --secondary-color: #581f1f;
    --primary-light: #9c1d1d;
    --hero-light: #c92828;
    --light-color: #FEFDF8;
}

body {
    font-family: 'Montserrat', sans-serif;
}

p {
    font-family: 'Hind', sans-serif;
}

ul {
    list-style-type: none;
}

a {
    text-decoration: none;
}

img {
    /* Keeps them within their container, so it won't bust out */
    width: 100%;
}

/* Navbar */
.navbar {
    width: 100%;
    height: 260px;
    text-align: center;
    background-image: url(../images/navbarbg.jpg);
    background-size: cover;
    background-color: none;
}

.scrolled {
    background-color: var(--primary-light) !important;
    transition: background-color 500ms ease-in-out;
}

.navbar img {
    width: 380px;
    height: 140px;
    margin: 0 auto;
    margin-top: 30px;
}

.navbar li {
    display: inline-block;
    margin-top: 20px;
}

.navbar li a {
    color: var(--primary-light);
    margin: 0px 25px;
}

.overlay-menu li {
    display: none;
}

/* Scrolled Navbar */
#scrollednav {
    position: fixed;
    display: none;
    width: 100%;
    height: 60px;
    float: left;
    top: 0;
    z-index: 999;
    background-color: var(--primary-light);
}


#scrollednavlogo {
    width: 10%;
    height: 60px;
    float: left;
}

.scrollednavlogo {
    width: auto;
    margin-top: 10px;
    margin-left: 20px;
}

#scrollednav ul {
    width: 90%;
    float: right;
    text-align: right;
	margin-top : 12px;
	list-style: none;
	position: relative;
	}
	
/* Positioning the navigation items inline */
#scrollednav ul li {
	margin: 0px;
	display: inline-block;
	}

/* Styling the links */
#scrollednav ul li a {
	display:block;
	padding: 10px 20px;	
	color: white;
	font-size: 14px;
	text-decoration:none;
    font-family: 'Montserrat', sans-serif;
}


/* Background color change on Hover */
#scrollednav ul li a:hover {
	-o-transition:.15s; /* For compatibility */
	-ms-transition:.15s;
	-moz-transition:.15s;
	-webkit-transition:.15s;
	transition:.3s;    
    color: #ffa6a6;
}

/* Secondary Scrolled Navbar */
#secondary-scrollednav {
    position: fixed;
    display: none;
    width: 100%;
    height: 60px;
    float: left;
    top: 0;
    background-color: var(--primary-light);
}

#secondary-scrollednav ul {
    width: 90%;
    float: right;
    text-align: right;
	margin-top : 12px;
	list-style: none;
	position: relative;
}

#secondary-scrollednav ul li {
    margin: 0px;
	display: inline-block;
}

#secondary-scrollednav ul li a {
	display:block;
	padding: 10px 20px;	
	color: white;
	font-size: 14px;
	text-decoration:none;
    font-family: 'Montserrat', sans-serif;
}

#secondary-scrollednav ul li a:hover {
	-o-transition:.15s; /* For compatibility */
	-ms-transition:.15s;
	-moz-transition:.15s;
	-webkit-transition:.15s;
	transition:.3s;    
    color: #ffa6a6;
}

.index-showcase, .about-showcase {
    height: auto;
    text-align: center;
    background: url(../images/index/longsectionbg.jpg) no-repeat center center fixed; 
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
}

/* Index - Hero */
.index-hero {
    height: 800px;
    background-image: url(../images/index/headerbg.jpg);
    background-size: cover;
    background-position-y: 50%;
    color: var(--hero-light);
    text-align: left;
    box-shadow:inset 0 0 0 2000px rgba(0, 0, 0, 0.05);
}

.index-hero .container {
    max-width: 1700px;
}

.index-hero .grid {
    grid-template-columns: 0.35fr;
    justify-content: flex-start;
}

.index-hero .section-title {
    margin-top: 10px;
}

.index-hero .btn {
    font-size: 12px;
    background-color: var(--primary-light);
    margin-top: 25px;
}

.mobile-branding {
    display: none;
}

/* Index - Showcase */
.index-showcase {
    height: auto;
    text-align: center;
    background-image: url(../images/index/longsectionbg.jpg);
    color: var(--primary-light);
    overflow: hidden;
}

.index-showcase .grid {
    grid-template-rows: 0.5fr 0.25fr;
    grid-template-columns: repeat(3, 0.25fr);
    align-items: center;
    padding-top: 120px;
    padding-bottom: 120px;
    gap: 80px;
}

.index-showcase .grid .showcase-heading {
    grid-column-start: 1;
    grid-column-end: 4;
    align-self: flex-end;
    max-width: 750px;
    margin-left: auto;
    margin-right: auto;
    text-align: center;
}

.index-showcase img {
    width: 100%;
    height: auto;
}

.index-showcase {
    text-align: left;
}

.index-showcase .lead {
    margin-top: 25px;
}

.index-showcase .showcase-item .section-paragraph {
    width: 100%;
    margin-bottom: 30px;
}

/* About - Hero */
.about-hero {
    height: 800px;
    background-image: url(../images/products/productheader.jpeg);
    background-size: cover;
    background-position-y: 60%;
    color: var(--hero-light);
    text-align: left;
    text-align: center;
}

.about-hero .grid {
    grid-template-columns: 0.35fr;
    justify-content: flex-start;
}

.about-hero .container {
    max-width: 1700px;
}

.about-hero .btn {
    font-size: 12px;
    background-color: var(--primary-light);
    margin-top: 5px;
}

/* About - Showcase */
.about-showcase {
    height: auto;
    background-image: url(../images/index/longsectionbg.jpg);
    text-align: center;
    color: var(--primary-light);
}


.about-showcase .section-paragraph {
    width: 60%;
    margin-left: auto;
    margin-right: auto;
}

.about-showcase .grid {
    grid-template-rows: 0.5fr;
    grid-template-columns: repeat(2, 0.3fr);
    justify-content: center;
    align-items: center;
    gap: 0px;
    padding: 100px 0;
}
/* ... */

